--- a/src/styles.css
+++ b/src/styles.css
@@ -1,184 +1,232 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Montserrat';
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
-  background-color: #131212;
-  color: #f2f2f2
-}
-
-h1 {
-  text-align: center;
-  margin: .5em;
-  font-size: clamp(3.5rem, 10vw - 2rem, 4rem);
-  font-weight: 900;
-}
-
-h1 span {
-  background-clip: text;
-  color: transparent;
-  word-break: break-word;
-}
-
-h1 b {
-  text-decoration: underline;
-}
-
-h1 span:nth-child(2) {
-  background-image: linear-gradient(to right, #fdc830, #f37335);
-}
-
-h1 span:nth-child(4) {
-  background-image: linear-gradient(to right, #36d1dc, #5b86e5);
-}
-
-section {
-  width: 90%;
-  margin: auto;
+  background-color: #c9d6ff;
+  background: linear-gradient(to right, #e2e2e2, #c9d6ff);
   display: flex;
-  gap: 5em;
-  flex-wrap: wrap;
-  justify-content: center;
   align-items: center;
-  padding: 2em 0;
-}
-
-section h5 {
-  font-size: 2.5em;
-  background: #000;
-  padding: .5em;
-  border-radius: 5px;
-  flex: 1;
-  word-break: break-all;
-  display: block;
-  min-width: 300px;
-  margin: auto;
-}
-
-h5 span {
-  color: #36d1dc;
-}
-
-.container-auth {
-  flex: 1;
-  border: 2px solid #8a8888;
-  border-radius: 10px;
-  padding: 1em;
-  background-color: rgba(0, 0, 0, 0.411);
-  box-shadow: 10px 15px 25px #1b1b1b;
-}
-
-.container-auth h2 {
-  font-size: bold;
-  text-align: center;
-  margin: auto auto 1.5em auto;
-  border-bottom: 2px solid rgb(117, 117, 117);
-  padding-bottom: .3em;
-  width: 80%;
-}
-
-.container-auth form {
-  display: flex;
+  justify-content: center;
   flex-direction: column;
-  gap: 1em;
-  margin: 1em 0;
-}
-
-form input {
-  font-size: 1.2em;
-  padding: .5em;
-  border-radius: 5px;
-  width: 100%;
-  min-width: 200px
-}
-
-
-form .container-buttons {
-  gap: 1em;
-  margin: 1em auto auto auto;
-  flex-wrap: wrap;
-  display: flex;
-  width: 100%;
-}
-
-
-.container-buttons button,
-section button {
-  font-size: 1.1em;
-  padding: .8em;
-  cursor: pointer;
-  border: none;
-  border-radius: 5px;
-  transition: all .5s ease-in-out;
-  color: #fff;
-  font-weight: bold;
-  flex: 1;
-  min-width: 100px;
-}
-
-.container-buttons button:hover,
-section button:hover {
-  transform: scale(1);
-}
-
-.container-buttons button:active,
-section button:active {
-  transform: scale(.9);
-}
-
-.container-buttons button:nth-child(1) {
-  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-
-}
-
-.container-buttons button:nth-child(1):hover {
-  background-image: linear-gradient(135deg, #526bd8 0%, #694092 100%);
-}
-
-.container-buttons button:nth-child(2) {
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.15) 0%, rgba(0, 0, 0, 0.15) 100%), radial-gradient(at top center, rgba(255, 255, 255, 0.40) 0%, rgba(0, 0, 0, 0.40) 120%) #989898;
-  background-blend-mode: multiply, multiply;
-}
-
-.container-buttons button:nth-child(2):hover {
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.15) 0%, rgba(0, 0, 0, 0.15) 100%), radial-gradient(at top center, rgba(255, 255, 255, 0.40) 0%, rgba(0, 0, 0, 0.588) 120%) #989898;
-}
-
-section button {
-  background: rgb(226, 38, 38);
-  flex: none;
-}
-
-section button:hover {
-  background: red;
-}
-
-.loading {
-  background-color: rgba(7, 2, 12, 0.342);
-  width: 100vw;
   height: 100vh;
+}
+
+.container {
+  background-color: #fff;
+  border-radius: 30px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+  position: relative;
+  overflow: hidden;
+  width: 768px;
+  max-width: 100%;
+  min-height: 480px;
+}
+
+.container p {
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.3px;
+  margin: 20px 0;
+}
+
+.container span {
+  font-size: 12px;
+  margin: 10px 0;
+}
+
+.container a {
+  color: #333;
+  font-size: 13px;
+  text-decoration: none;
+  margin: 15px 0 10px;
+}
+
+.button-common {
+  color: #fff;
+  font-size: 12px;
+  padding: 10px 45px;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.submit {
+  background-color: #512da8;
+}
+
+.hidden {
+  background-color: transparent;
+  border-color: #fff;
+}
+
+.container form {
+  background-color: #fff;
   display: flex;
-  justify-content: center;
   align-items: center;
-  font-size: 2em;
-  font-weight: bold;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  height: 100%;
 }
 
-.loading span {
-  animation: fadeIn .5s infinite linear alternate;
+.container input {
+  background-color: #eee;
+  border: none;
+  margin: 8px 0;
+  padding: 10px 15px;
+  font-size: 13px;
+  border-radius: 8px;
+  width: 100%;
+  outline: none;
 }
 
-@keyframes fadeIn {
-  0% {
-    opacity: .2;
+.form-container {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  transition: all 0.6s ease-in-out;
+}
+
+.sign-in {
+  left: 0;
+  width: 50%;
+  z-index: 2;
+}
+
+.container.active .sign-in {
+  transform: translateX(100%);
+}
+
+.sign-up {
+  left: 0;
+  width: 50%;
+  opacity: 0;
+  z-index: 1;
+}
+
+.container.active .sign-up {
+  transform: translateX(100%);
+  opacity: 1;
+  z-index: 5;
+  animation: move 0.6s;
+}
+
+@keyframes move {
+  0%,
+  49.99% {
+    opacity: 0;
+    z-index: 1;
   }
-
+  50%,
   100% {
     opacity: 1;
+    z-index: 5;
   }
+}
+
+.social-icons {
+  margin-top: 10px;
+}
+
+.social-icons button {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 20%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 3px;
+  width: 40px;
+  height: 40px;
+}
+
+.social-icons button:hover {
+  border-color: #512da8;
+}
+
+.social-icons button i {
+  font-size: 18px;
+}
+
+.social-icons button i.fa-google-plus-g {
+  color: #db4a39;
+}
+
+.social-icons button i.fa-github {
+  color: #333;
+}
+
+.toggle-container {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  transition: all 0.6s ease-in-out;
+  border-radius: 150px 0 0 100px;
+  z-index: 1000;
+}
+
+.container.active .toggle-container {
+  transform: translateX(-100%);
+  border-radius: 0 150px 100px 0;
+}
+
+.toggle {
+  background-color: #512da8;
+  height: 100%;
+  background: linear-gradient(to right, #5c6bc0, #512da8);
+  color: #fff;
+  position: relative;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+  transform: translateX(0);
+  transition: all 0.6s ease-in-out;
+}
+
+.container.active .toggle {
+  transform: translateX(50%);
+}
+
+.toggle-panel {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 30px;
+  text-align: center;
+  top: 0;
+  transform: translateX(0);
+  transition: all 0.6s ease-in-out;
+}
+
+.toggle-left {
+  transform: translateX(-200%);
+}
+
+.container.active .toggle-left {
+  transform: translateX(0);
+}
+
+.toggle-right {
+  right: 0;
+  transform: translateX(0);
+}
+
+.container.active .toggle-right {
+  transform: translateX(200%);
 }
