Se agrega el mapa con los poligonos en el componente HomePage

--- a/src/styles.css
+++ b/src/styles.css
@@ -280,3 +280,17 @@ body {
 .container.active .toggle-right {
   transform: translateX(200%);
 }
+
+.loading span {
+  animation: fadeIn 0.5s infinite linear alternate;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0.2;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
