--- a/src/styles.css
+++ b/src/styles.css
@@ -66,6 +66,25 @@ body {
 
 .submit {
   background-color: #512da8;
+  transition: all 0.2s;
+}
+
+.submit:disabled {
+  background-color: #ccc;
+  color: #666;
+  cursor: not-allowed;
+  transition: all 0.2s;
+}
+
+.edit-toggle {
+  background-color: #512da8;
+  transition: all 0.2s;
+}
+
+.cancel {
+  background-color: #ccc;
+  color: #666;
+  transition: all 0.2s;
 }
 
 .hidden {
@@ -92,10 +111,21 @@ body {
   border-radius: 8px;
   width: 100%;
   outline: none;
+  transition: all 0.2s;
 }
 
 .container input:focus {
   border: 1px solid #512da8;
+}
+
+.container input:disabled {
+  opacity: 0.7;
+  background-color: #f4f4f4;
+  color: #666;
+  cursor: not-allowed;
+  user-select: none;
+  pointer-events: none;
+  transition: all 0.2s;
 }
 
 .btn-upload {
@@ -110,6 +140,12 @@ body {
   transition: all 0.2s;
   outline: none;
   overflow: hidden;
+}
+
+.btn-upload:disabled {
+  background-color: #f4f4f4;
+  color: #666;
+  border: 1px dashed #ccc;
 }
 
 .btn-upload i {
@@ -132,10 +168,22 @@ body {
   opacity: 0;
 }
 
+.btn-upload input:disabled {
+  cursor: not-allowed;
+  opacity: 0;
+  user-select: none;
+}
+
 .btn-upload:hover {
   background-color: #512da8;
   color: #fff;
   border: 1px solid #512da8;
+}
+
+.btn-upload:hover:disabled {
+  background-color: #f4f4f4;
+  color: #666;
+  border: 1px dashed #ccc;
 }
 
 .form-container {
@@ -499,13 +547,20 @@ body {
 
 .home {
   position: absolute;
-  height: 95%;
+  height: 98%;
   width: calc(100% - 100px);
-  top: 3%;
+  top: 1%;
   left: 100px;
   transition: all 0.3s ease;
   overflow: hidden;
   z-index: 1;
+}
+
+.home.edit-acc {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .text {
@@ -554,9 +609,36 @@ body {
 
 .map-container {
   position: absolute;
-  top: 10%;
+  top: 9%;
   left: 1%;
-  height: 90%;
+  height: 88%;
   width: 96%;
   transition: all 0.3s ease;
+  border-radius: 20px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+}
+
+.container.edit-acc {
+  min-height: 95%;
+}
+
+.update-data {
+  position: relative;
+  width: 90%;
+  left: 5%;
+  top: -1%;
+}
+
+.user-photo-container img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
 }
