Manejo de errores y validaciones personalizados, funcionalidad para ver u ocultar contraseña

--- a/src/styles.css
+++ b/src/styles.css
@@ -128,6 +128,87 @@ body {
   transition: all 0.2s;
 }
 
+.password-input-container {
+  width: 100%;
+  position: relative;
+}
+
+.password-toggle {
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  transform: translateY(-50%);
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.password-toggle:disabled i {
+  color: #666;
+  cursor: not-allowed;
+  user-select: none;
+  transition: all 0.2s;
+}
+
+.password-toggle i {
+  font-size: 18px;
+  color: #512da8;
+}
+
+.error-container {
+  color: #ff0000;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  width: 102%;
+}
+
+.fa-exclamation-circle {
+  font-size: 14px;
+  margin-top: -8px;
+  margin-right: 5px;
+}
+
+.error {
+  font-size: 12px;
+  margin-top: -5px;
+  margin-bottom: 5px;
+}
+
+.error-input::placeholder {
+  color: #ff0000;
+  text-align: center;
+}
+
+.error-input:focus::placeholder {
+  color: transparent;
+  transition: all 0.2s;
+}
+
+input.error-input {
+  border: 1px solid #ff0000;
+  background-color: #fff;
+  transition: all 0.2s;
+}
+
+input.error-input:focus {
+  border: 1px solid #512da8;
+  background-color: #eee;
+  transition: all 0.2s;
+}
+
+.password-toggle.error-input,
+.password-toggle.error-input i {
+  color: transparent;
+  cursor: text;
+}
+
+input.error-input:focus + .password-toggle.error-input i {
+  color: #512da8;
+  cursor: pointer;
+}
+
 .btn-upload {
   background-color: transparent;
   position: relative;
